# hmi1_Illarionov

./: CMakeLists.txt  License.txt  README.md
src/: Editor.cpp  Editor.hpp  Palette.cpp  Palette.hpp  VariableDatabase.cpp  VariableDatabase.hpp  VisualObject.cpp  VisualObject.hpp  main.cpp  test_main.cpp
